# Battery-Management-System

./: .env.example  .gitignore  .npmrc  Makefile  README.md  TIGRIS.md  package.json  pnpm-lock.yaml  render.yaml
apps/web/: index.html  (+4 more)
backend/: pyproject.toml
backend/src/agent_workbench/: __init__.py  api.py  main.py
backend/src/agent_workbench/core/: __init__.py  config.py  dependencies.py
backend/src/agent_workbench/domain/: __init__.py  agents.py  bms_models.py  fireworks_openai.py  models.py  opsera_prompts.py
backend/src/agent_workbench/infra/: __init__.py  deep_agent_resources.py  opsera_mcp.py  opsera_oauth.py  rtrvr_client.py  security.py  session_store.py  tigris_mcp.py  tigris_storage.py  workspace.py  workspace_backend.py  workspace_context.py  workspace_seed.py
backend/src/agent_workbench/routes/: __init__.py  config.py  files.py  runs.py  sessions.py  workspaces.py
backend/src/agent_workbench/scripts/: opsera_login.py  opsera_probe.py  rtrvr_sync.py  tigris_bootstrap.py  tigris_enrich.py  tigris_probe.py
backend/src/agent_workbench/services/: bms_validation.py  streaming.py  titles.py  topology_layout.py
backend/src/agent_workbench_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_agents.py  test_api.py  test_bms_agents.py  test_bms_files.py  test_bms_validation.py  test_bms_validation_extended.py  test_opsera_mcp.py  test_security.py  test_streaming.py  test_tigris_mcp.py  test_tigris_storage.py  test_topology_layout.py  test_workspace_backend.py  test_workspace_context.py  test_workspace_seed.py
(+72 files in other folders)
