[project]
name = "agent-workbench-backend"
version = "0.1.0"
description = "Local Deep Coding Agent Workbench backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
deepagents = [
  "deepagents>=0.0.1",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-ollama>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0"
]
test = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

